# orbi-inference

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: security.yml  test.yml
apps/gateway/: Dockerfile  alembic.ini  entrypoint.sh
apps/gateway/alembic/: env.py  script.py.mako
apps/gateway/alembic/versions/: 0001_phase1_foundation.py
apps/gateway/src/orbi_gateway/: __init__.py  config.py  database.py  dependencies.py  errors.py  logging.py  main.py  middleware.py
apps/gateway/src/orbi_gateway/models/: __init__.py  base.py  entities.py
apps/gateway/src/orbi_gateway/routes/: __init__.py  admin.py  chat.py  health.py  models.py  usage.py
apps/gateway/src/orbi_gateway/schemas/: api.py
apps/gateway/src/orbi_gateway/services/: __init__.py  (+8 more)
apps/gateway/tests/integration/: test_phase1_lifecycle.py
apps/gateway/tests/security/: test_auth_boundaries.py  test_error_redaction.py  test_security_middleware.py  test_worker_scope_boundary.py
apps/gateway/tests/unit/: test_api_keys.py  test_budget.py  test_circuit_breaker.py  test_idempotency.py  test_logging.py  test_worker_tokens.py
apps/node/: Dockerfile  README.md  pyproject.toml
apps/node/src/orbi_node/: __init__.py  auth.py  client.py  config.py  errors.py  hardware.py  heartbeat.py  logging.py  main.py  runtime.py  schemas.py  worker.py
apps/node/src/orbi_node/runtimes/: __init__.py  base.py  gemma_transformers.py  mock.py  registry.py
apps/node/tests/: conftest.py
apps/node/tests/integration/: test_node_lifecycle.py  test_tiny_model_adapter.py
apps/node/tests/security/: test_boundaries.py
apps/node/tests/unit/: test_auth.py  test_client.py  test_config.py  test_gemma_runtime.py  test_node_logging.py  test_runtime.py  test_runtime_registry.py  test_worker.py
deploy/: docker-compose.yml
docs/: api-reference.md  phase-1-build-confirmation.md  phase-1-decisions.md  phase-1-verification.md  phase-2-build-confirmation.md  phase-2-worker-runtime.md  security.md
docs/rfcs/: README.md
scripts/: bootstrap-dev.py
(+2 files in other folders)
