[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbi-inference"
version = "0.1.0.dev0"
description = "Open-source distributed LLM inference control plane."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = {text = "Apache-2.0"}
authors = [{name = "Tej", email = "security@orbi-inference.dev"}]
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "asyncpg>=0.30,<1",
  "alembic>=1.14,<2",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "redis>=5.2,<7",
  "argon2-cffi>=23.1,<26",
  "PyJWT[crypto]>=2.10,<3",
  "structlog>=24.4,<27",
  "httpx>=0.28,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
  "bandit[toml]>=1.8,<2",
]

[tool.setuptools]
package-dir = {"" = "apps/gateway/src"}

[tool.setuptools.packages.find]
where = ["apps/gateway/src"]

[tool.pytest.ini_options]
pythonpath = ["apps/gateway/src"]
asyncio_mode = "auto"
testpaths = ["apps/gateway/tests"]
markers = [
  "integration: requires PostgreSQL and Redis services",
  "security: security-boundary tests",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps/gateway/src", "apps/gateway/tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101"]

[tool.bandit]
exclude_dirs = ["apps/gateway/tests"]
skips = ["B101"]
