[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbi-node"
version = "0.1.0"
description = "Secure ORBI inference worker runtime."
requires-python = ">=3.12,<3.14"
dependencies = [
  "httpx>=0.28,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "structlog>=24.4,<26",
]

[project.optional-dependencies]
gemma = [
  "accelerate>=1.2,<2",
  "torch>=2.6,<3",
  "transformers>=4.51,<6",
]
gemma-quantized = [
  "bitsandbytes>=0.45,<1",
]

[project.scripts]
orbi-node = "orbi_node.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
